RESOLVED FIXED303128
AirPods capture mute does not work with multi-microphone capture
https://bugs.webkit.org/show_bug.cgi?id=303128
Summary AirPods capture mute does not work with multi-microphone capture
youenn fablet
Reported 2025-11-26 01:00:56 PST
AirPoids capture mute does not work with multi-microphone capture
Attachments
Radar WebKit Bug Importer
Comment 1 2025-11-26 01:01:07 PST
youenn fablet
Comment 2 2025-11-26 01:34:32 PST
EWS
Comment 3 2025-11-26 11:21:34 PST
Committed 303576@main (d037c190b104): <https://commits.webkit.org/303576@main> Reviewed commits have been landed. Closing PR #54475 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.