AirPods capture mute does not work with multi-microphone capture rdar://165432476 https://bugs.webkit.org/show_bug.cgi?id=303128

Reviewed by Jean-Yves Avenard.

When VPIO is no longer running but non-VPIO capture is ongoing, muting/unmuting via AirPods should still work.
This was not the case as we were checking whether the VPIO unit was producing microphone samples or not.
We update the check to include all units.

We also update the test in CoreAudioCaptureUnit::updateMutedState to only check for other units.

Manually tested.

* Source/WebCore/platform/mediastream/mac/CoreAudioCaptureUnit.cpp:
(WebCore::CoreAudioCaptureUnit::isAnyUnitCapturingExceptFor):
(WebCore::CoreAudioCaptureUnit::isAnyUnitCapturing):
(WebCore::CoreAudioCaptureUnit::updateMutedState):
(WebCore::CoreAudioCaptureUnit::disableMutedSpeechActivityEventListener):
* Source/WebCore/platform/mediastream/mac/CoreAudioCaptureUnit.h:

Canonical link: https://commits.webkit.org/303576@main